[package]
name = "tide-websockets-ext"
version = "0.1.0"
edition = "2018"
license = "Apache 2.0 or MIT"
readme = "README.md"

[dependencies]
async-std = "1.9"
dashmap = "4.0"
http-types = "2.11"
futures = "0.3"
serde = "1.0"
tide-websockets = "0.4"
uuid = { version = "0.8", features = ["v4"] }


[dev-dependencies]
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
