[package]
name = "tide-websockets-ext"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [
    "Boyd Johnson johnson.boyd@gmail.com"
]
readme = "README.md"
description = "Websockets state for saving tide-websockets WebsocketConnections"
keywords = ["tide", "websockets"]
categories = ["web-programming::http-server", "web-programming"]
repository = "https://github.com/boydjohnson/tide-websockets-ext"

[dependencies]
async-std = "1.9"
dashmap = "4.0"
http-types = "2.11"
futures = "0.3"
serde = "1.0"
tide-websockets = "0.4"
uuid = { version = "0.8", features = ["v4"] }


[dev-dependencies]
tide = "0.16"
async-std = { version = "1.9", features = ["attributes"] }
